Search tool: larger vertical space in button groups to avoid scrollbar

--- a/app/src/js/search/style.less
+++ b/app/src/js/search/style.less
@@ -120,7 +120,7 @@
   .search--button-group {
     display: flex;
     flex-wrap: wrap;
-    max-height: 4.8em; // line ~1.6em
+    max-height: 6em;
     overflow: auto;
     > .search--button-keyword {
       cursor: pointer;
